<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.albums.create.AlbumCreateActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadeScrollbars="false"
        android:paddingBottom="50dp"
        android:scrollbarSize="5dp"
        android:scrollbarThumbVertical="@color/purple_200"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/album_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/name_album_detail"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/album_name_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/name_album_detail"
                android:hint="@string/name_album_detail"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:background="@drawable/input_textview_shape" />

            <TextView
                android:id="@+id/album_cover_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/cover_album_detail"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/album_cover_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/cover_album_detail"
                android:hint="@string/cover_album_detail"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:background="@drawable/input_textview_shape" />

            <TextView
                android:id="@+id/album_release_date_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/release_date_album_detail"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/album_release_date_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/date_format_placeholder"
                android:hint="@string/date_format_placeholder"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:background="@drawable/input_textview_shape" />

            <TextView
                android:id="@+id/album_genre_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/genre_album_detail"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/album_genre_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/genre_album_detail"
                android:hint="@string/genre_album_detail"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:background="@drawable/input_textview_shape"
                android:entries="@array/genre_options"/>

            <TextView
                android:id="@+id/album_record_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/record_label_album_detail"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/album_record_label_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/record_label_album_detail"
                android:hint="@string/record_label_album_detail"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:background="@drawable/input_textview_shape"
                android:entries="@array/record_options"/>

            <TextView
                android:id="@+id/album_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/description_album_detail"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/album_description_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:autofillHints="@string/description_album_detail"
                android:hint="@string/description_album_detail"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:background="@drawable/input_textview_shape" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/add_album_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_add"
        android:text="@string/add_album_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>