<resources>
    <string name="app_name">Vinilos</string>
    <string name="title_albums">Álbumes</string>
    <string name="title_performers">Artistas</string>
    <string name="title_collectors">Coleccionistas</string>
    <string name="title_collector_detail">Detalle coleccionista</string>
    <string name="title_collector_detail_icon">Ir a detalle coleccionista</string>
    <string name="name_collector_detail">Nombre</string>
    <string name="phone_collector_detail">Télefono</string>
    <string name="email_collector_detail">E-mai</string>
    <string name="favorites_collector_detail">Gustos Musicales</string>
    <string name="title_performer_detail">Detalle artista</string>
    <string name="title_performer_detail_icon">Ir a detalle artista</string>
    <string name="name_performer_detail">Nombre</string>
    <string name="description_performer_detail">Descripción</string>
    <string name="birthday_performer_detail">Fecha de cumpleaños</string>
    <string name="image_performer_detail">Imagen</string>
    <string name="image_performer_detail_description">Image performer</string>
    <string name="title_album_detail">Detalle álbum</string>
    <string name="title_album_detail_icon">Ir a detalle álbum</string>
    <string name="name_album_detail">Nombre</string>
    <string name="cover_album_detail">Portada</string>
    <string name="release_date_album_detail">Fecha de lanzamiento</string>
    <string name="genre_album_detail">Género</string>
    <string-array name="genre_options">
        <item>Seleccionar</item>
        <item>Classical</item>
        <item>Salsa</item>
        <item>Rock</item>
        <item>Folk</item>
    </string-array>
    <string name="record_label_album_detail">Sello discográfico</string>
    <string-array name="record_options">
        <item>Seleccionar</item>
        <item>Sony Music</item>
        <item>EMI</item>
        <item>Discos Fuentes</item>
        <item>Elektra</item>
        <item>Fania Records</item>
    </string-array>
    <string name="description_album_detail">Descripción</string>
    <string name="tracks_album_detail">Tracks</string>
    <string name="add_track_album_button">Agregar track</string>
    <string name="title_track">Agregar track</string>
    <string name="add_track_button">Agregar</string>
    <string name="name_track">Nombre</string>
    <string name="duration_track">Duración</string>
    <string name="duration_track_hint">hh:mm:ss</string>
    <string name="add_track_message">Track agregado exitosamente</string>
    <string name="invalid_format_duration">Formato de duración inválido, debe ser hh:mm:ss</string>
    <string name="add_album_button">Crear</string>
    <string name="add_album_title">Crear álbum</string>
    <string name="date_format_placeholder">dd/mm/yyyy</string>
    <string name="create_album_message">Álbum creado exitosamente</string>
    <string name="invalid_format_date">Formato de fecha inválido, debe ser dd/mm/yyyy</string>
    <string name="btn_add_album">Agregar un nuevo álbum</string>
    <string name="btn_go_back">Ir hacia atrás</string>

</resources>