<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_album"
        android:icon="@drawable/ic_album_music"
        android:title="@string/title_albums" />

    <item
        android:id="@+id/navigation_performer"
        android:icon="@drawable/ic_performers_music"
        android:title="@string/title_performers" />

    <item
        android:id="@+id/navigation_collector"
        android:icon="@drawable/ic_collectors_music"
        android:title="@string/title_collectors" />
</menu>